--- a/app/views/song/index.html.erb
+++ b/app/views/song/index.html.erb
@@ -5,6 +5,6 @@
 <% end %>
 
 <br>
-<%= link_to "Create new tag", '/tag/create' %>
+<%= link_to "Create new tag", '/tag/new' %>
 <br>
-<%= link_to "Create new song", "/song/create" %>
+<%= link_to "Create new song", '/song/new' %>
