get an ugly but fully working many-to-many model with songs, tags, and a tagging system

--- a/app/views/song/index.html.erb
+++ b/app/views/song/index.html.erb
@@ -8,3 +8,5 @@
 <%= link_to "Create new tag", '/tag/new' %>
 <br>
 <%= link_to "Create new song", '/song/new' %>
+<br>
+<%= link_to "Assign a tag to a song", '/tagging' %>
