stable commit before adding Bootstrap

--- a/app/views/tag/new.html.erb
+++ b/app/views/tag/new.html.erb
@@ -3,6 +3,6 @@
 <%= form_for (@tag) do |t| %>
     <%= t.text_field :name, placeholder: "Name" %>
     <br>
-    <%= t.submit "Enter Track"%>
+    <%= t.submit "Enter Tag"%>
 
 <% end %>
